--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
-node_js:
+python:
   - "3.8"
 install:
-    - pip install -r requirements.txt
+  - pip install -r requirements.txt
 script:
-    - pytest
+  - pytest
