--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ deploy:
   distributions: sdist bdist_wheel
   skip_existing: true
   provider: pypi
+  server: https://test.pypi.org/legacy/
   username: "__token__"
-  password: "pypi-AgENdGVzdC5weXBpLm9yZwIkMDUzZmQyYmQtMzlkZS00NDQ0LWE4ODctZDg3MzI1MThiZDZlAAJFeyJwZXJtaXNzaW9ucyI6IHsicHJvamVjdHMiOiBbImRhbmllbC1zaW1wbGVyZXF1ZXN0Il19LCAidmVyc2lvbiI6IDF9AAAGIKBq2G5q1w2VfrRSREmEPFYKOD485KtuUawQFyoLzqBx"
+  password: "pypi-AgENdGVzdC5weXBpLm9yZwIkNDhjYzRkMWMtMDk0Ny00Y2YyLWE3NjAtNTBhMWJmMTcyOTgxAAJFeyJwZXJtaXNzaW9ucyI6IHsicHJvamVjdHMiOiBbImRhbmllbC1zaW1wbGVyZXF1ZXN0Il19LCAidmVyc2lvbiI6IDF9AAAGIBjIxvmjrzoY1IkWI6Q9gRVHO3iad35OpUaaPRIUhZet"
